[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/mont_serrat_48_dynfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Games/return_to_title.gd" type="Script" id=2]
[ext_resource path="res://title_screen/Fade.tscn" type="PackedScene" id=3]

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 416.0
margin_top = 295.0
margin_right = 863.0
margin_bottom = 425.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 447.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "New Game Scene"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 447.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 1 )
text = "BACK"

[node name="Fade" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]
[connection signal="fade_out_finished" from="Fade" to="." method="_on_Fade_fade_out_finished"]
